--- a/CodeforcesApp/app/src/main/res/layout/item_view.xml
+++ b/CodeforcesApp/app/src/main/res/layout/item_view.xml
@@ -7,8 +7,8 @@
     android:clipChildren="false"
     android:orientation="vertical"
     android:padding="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
