made compatible with jdk 19 with gradle update and added a new screen

--- a/CodeforcesApp/app/src/main/res/layout/layout_toolbar.xml
+++ b/CodeforcesApp/app/src/main/res/layout/layout_toolbar.xml
@@ -8,7 +8,7 @@
     >
 
     <ImageButton
-        android:id="@+id/btnDrawer"
+        android:id="@+id/btnDrawers"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="5dp"
